--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
       <p>Guess a number from 1 to 100</p>
       <form action="" method="get">
         <fieldset>
-          <input type="text" id="guess" maxlength="3">
+          <input type="text" id="guess" maxlength="3" autofocus>
           <input type="submit" value="Guess">
         </fieldset>
       </form>
